syntax = "proto3";

package docarray;

/*
 this file is just a placeholder for the DA coming from docarray dependency
 */
message DocumentArrayProto {

}
message DocumentProto {

}
